--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -20,7 +20,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.facebook.react:react-native:+'
     compile 'com.google.firebase:firebase-core:+'
+    compile 'com.android.support:support-v4:24.0.0'
     compile 'com.google.firebase:firebase-messaging:+'
     compile 'me.leolin:ShortcutBadger:1.1.17@aar'
+    compile project(path: ':ReactAndroid')
 }
-
