--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.3"
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 24
+        minSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -20,7 +20,7 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.firebase:firebase-core:+'
-    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.android.support:support-v4:26.+'
     compile 'com.google.firebase:firebase-messaging:+'
     compile 'me.leolin:ShortcutBadger:1.1.17@aar'
     compile project(path: ':ReactAndroid')
